# llm-detector

./: .gitignore  pyproject.toml  test_dataset_timeouts.py  test_model_samples.py
docs/: FEATURES.md  MODEL.md  NEW_DATASETS.md  TRAINING.md
llm_detector/assets/: default_model.joblib
tests/: conftest.py  test_types.py
tests/test_baselines/: test_baseline_helpers.py  test_builder_storage.py  test_cli.py  test_source_builder.py
tests/test_features/: test_divergence.py  test_registry.py  test_statistical.py  test_tokenizer.py  test_vectorizer.py
tests/test_integration/: test_streaming_sources.py
tests/test_models/: test_logistic.py
tests/test_runtime/: test_aggregation.py  test_api.py  test_api_cache.py  test_cli_real_data.py  test_detector_runtime.py  test_runtime_cli.py  test_textops.py
tests/test_training/: test_dataset_builder.py  test_pipeline.py  test_source_registry.py  test_source_utils.py  test_sources_base.py  test_sources_formal.py  test_sources_llm_2024.py  test_sources_social_media.py
